# pag_propensionesabogados

./: .gitignore  README.md  pyproject.toml  requirements.txt
app_core/: settings.py  signature.py  urls.py
apps/common/core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/common/core/api/: serializers.py  urls.py  views.py
apps/common/core/migrations/: 0001_initial.py  0002_alter_contactmodel_state.py  0002_delete_ipblockedmodel.py  0003_alter_modalbannermodel_image_file.py  0004_modalbannermodel_image_file_en_and_more.py  0005_contactmodel_from_page.py  0006_alter_contactmodel_from_page.py  0007_teammembermodel.py
apps/common/core/templates/: base.html  raw.html  security.txt
apps/common/core/templates/email/: contact_email_template.html
apps/common/core/templates/pages/: documents.html  index.html  privacy_policy.html  team_detail.html  terms_and_conditions.html
apps/common/core/templates/partials/: banner.html  footer.html  header.html  whatsapp.html
apps/common/utils/: admin.py  attack_patterns.py  forms.py  middleware.py  models.py  token_utils.py  urls.py  views.py
apps/common/utils/context_processors/: __init__.py
apps/common/utils/contrib/auth/: mixins.py
apps/common/utils/functions/: __init__.py  decode_base64.py  token_utils.py
apps/common/utils/management/commands/: delete_migrations.py
apps/common/utils/migrations/: 0001_initial.py  0002_whitelistedipmodel.py
apps/common/utils/templates/: errors_template.html
apps/common/utils/templatetags/: currency_format.py
apps/project/api/faq/: admin.py  apps.py  models.py
apps/project/api/faq/api/: serializers.py  urls.py  views.py
apps/project/api/faq/migrations/: 0001_initial.py  0002_alter_mainfaqmodel_options_and_more.py
apps/project/api/financial_education/: admin.py  apps.py  models.py
apps/project/api/financial_education/api/: serializers.py  urls.py  views.py
apps/project/api/financial_education/migrations/: 0001_initial.py  0002_alter_financialeducationmodel_description_and_more.py  0003_alter_financialeducationmodel_options.py
apps/project/api/platform/auth_platform/: admin.py  apps.py  models.py  urls.py
apps/project/api/platform/calculator/: apps.py  models.py
apps/project/api/platform/insolvency_form/: admin.py  apps.py  models.py  signals.py  urls.py  widgets.py
apps/project/api/pqrs/: apps.py  models.py
apps/project/common/account/: README.md  admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/project/common/notifications/: apps.py
apps/project/common/reports/: apps.py
apps/project/common/users/: admin.py  apps.py  models.py  validators.py  views.py
public/staticfiles/assets/imgs/: convert_to_webp.py
(+96 files in other folders)
