[project]
name = "pag-propensiones"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "asgiref==3.8.1",
    "attrs==25.3.0",
    "babel==2.17.0",
    "certifi==2024.7.4",
    "cffi>=2.0.0",
    "charset-normalizer==3.3.2",
    "cryptography==44.0.1",
    "diff-match-patch==20230430",
    "distro==1.9.0",
    "django==4.2.21",
    "django-admin-sortable2==2.2.1",
    "django-auditlog==3.0.0",
    "django-ckeditor-5==0.2.13",
    "django-cleanup==8.1.0",
    "django-cors-headers==4.3.1",
    "django-countries==7.6.1",
    "django-debug-toolbar==4.4.2",
    "django-encrypted-model-fields==0.6.5",
    "django-environ==0.11.2",
    "django-filter==24.2",
    "django-honeypot==1.2.1",
    "django-import-export==4.0.8",
    "django-nested-admin==4.0.2",
    "django-parler==2.3",
    "django-recaptcha==4.0.0",
    "django-rosetta==0.10.0",
    "djangorestframework==3.15.2",
    "djangorestframework-api-key==3.0.0",
    "djangorestframework-simplejwt==5.3.1",
    "docx>=0.2.4",
    "docxcompose==1.4.0",
    "docxtpl==0.19.1",
    "drf-yasg==1.21.7",
    "et-xmlfile==2.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.7",
    "importlib-resources==6.5.2",
    "inflection==0.5.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "lxml==5.3.1",
    "markuppy==1.14",
    "markupsafe==3.0.2",
    "mysqlclient>=2.2.7",
    "nltk>=3.9.2",
    "openai==1.72.0",
    "openpyxl==3.1.2",
    "packaging==24.1",
    "pandas>=3.0.0",
    "polib==1.2.0",
    "psycopg2>=2.9.11",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pypng==0.20220715.0",
    "python-barcode==0.15.1",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-monkey-business==1.1.0",
    "pytz==2024.1",
    "pyyaml==6.0.1",
    "qrcode==7.4.2",
    "referencing==0.36.2",
    "requests==2.32.3",
    "rosetta==0.3",
    "rpds-py==0.24.0",
    "scipy>=1.17.0",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlparse==0.5.0",
    "swagger-spec-validator==3.0.4",
    "tablib==3.5.0",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
    "typing-inspection==0.4.0",
    "unidecode==1.3.8",
    "uritemplate==4.1.1",
    "urllib3==2.2.2",
    "xlrd==2.0.1",
    "xlwt==1.3.0",
]
